--- a/css/main-header.css
+++ b/css/main-header.css
@@ -23,6 +23,12 @@
   line-height: 16px;
   color: var(--col-2);
   text-decoration: none;
+  transition: all 0.3s;
+}
+
+.main-header__list a:hover,
+.main-header__list a:focus {
+  color: var(--col-5);
 }
 
 .main-header__bottom {}
@@ -41,13 +47,48 @@
   gap: 24px;
 }
 
-.main-header__navigation a {
+.main-header__menu-link {
   font-family: var(--ff-1);
   font-weight: 600;
   font-size: 15px;
   line-height: 24px;
   color: var(--col-2);
   text-decoration: none;
+  padding-bottom: 20px;
+  display: inline-block;
+  position: relative;
+}
+.main-header__menu-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: var(--col-7);
+  transition: transform 0.3s;
+  transform: scaleX(0);
+  position: absolute;
+  bottom: 0;
+  transform-origin: center;
+}
+.main-header__menu-link:hover {
+  color: var(--col-5);
+}
+
+.main-header__menu-link:active {
+  color: var(--col-7);
+}
+
+.main-header__menu-link:hover::after,
+.main-header__menu-link:active::after {
+  transform: scaleX(1);
+}
+
+.main-header__menu-link:hover::after {
+  background-color: var(--col-5);
+}
+
+.main-header__menu-link:active::after {
+  background-color: var(--col-7);
 }
 
 .main-header__right {}
@@ -61,6 +102,11 @@
   line-height: 24px;
   color: var(--col-2);
   text-decoration: none;
+  transition: all 0.3s;
+}
+
+.main-header__telephone:hover {
+  color: var(--col-5);
 }
 
 .main-header__button {
@@ -76,6 +122,18 @@
   padding: 10px 16px;
   border: 1px solid rgba(0, 152, 208, 0.5);
   border-radius: 4px;
+  transition: all 0.3s;
+  background-color: transparent;
+  min-height: 38px;
+}
+
+.main-header__button:hover {
+  color: var(--col-1);
+  background-color: var(--col-5);
+}
+
+.main-header__button:active {
+  background-color: var(--col-6);
 }
 
 .main-header__buttons {}
@@ -83,3 +141,19 @@
 .main-header__burger {}
 
 .button-menu {}
+
+
+
+
+  .js-menu-active .button-menu span:first-child {
+    transform: rotate(-45deg);
+  }
+
+  .js-menu-active .button-menu span:nth-child(2) {
+    /* height: 0; */
+    opacity: 0;
+  }
+
+  .js-menu-active .button-menu  span:last-child {
+    transform: rotate(45deg);
+  }
