добавил центровщик в проект

--- a/css/base.css
+++ b/css/base.css
@@ -134,3 +134,16 @@ button {
 .button-search:hover svg path {
   stroke: var(--col-1);
 }
+
+.wrapper {
+  max-width: 1545px;
+  width: 100%;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media (max-width: 425px) {
+  .wrapper {
+    padding: 0 10px;
+  }
+}
